# Fall_C-

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  start.sh  vcpkg.json
app/: config.cpp  config.hpp
app/core/: helpers.cpp  helpers.hpp
app/core/inferences/: pose.cpp  pose.hpp
app/core/orchestrators/: camera.cpp  fall.cpp  integrations.hpp  msg_gen.cpp  zmq_io.cpp  zmq_io.hpp
app/core/services/: fall.cpp  fall.hpp  fall_eval.cpp  fall_eval.hpp  fall_log.hpp  frame_buffer_manager.cpp  frame_buffer_manager.hpp  video_helper.cpp  video_helper.hpp
app/kafka/: kafka_producer.cpp  kafka_producer.hpp  msk_token.cpp
app/mqtt/: rabbitmq.hpp
app/utils/: aws.cpp  aws.hpp  detection_json.hpp  logger.cpp  logger.hpp  message.hpp  redis_client.hpp  rtsp_camera.cpp  rtsp_camera.hpp
